--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
       position:relative; padding-top:18px
     }
     .photo{
-      width:100%; height:280px; background:#e2e8f0 center/cover no-repeat;
-      border-radius:14px; clip-path:polygon(0 18%, 100% 0, 100% 100%, 0 100%); /* 삼각형 마스크 느낌 */
+      width:100%; height:420px; background:#e2e8f0 center/cover no-repeat;
       border:2px solid #fff; box-shadow:var(--shadow-sm)
     }
     .profile ul{list-style:none; padding:12px 0 0; margin:0}
@@ -217,37 +216,62 @@
       <div class="card">
         <h3 style="margin-top:0">PROJECT &amp; SKILL</h3>
         <p>
-          좋은 서비스는 사용자가 느긋하게 잘 이용할 수 있는 것이라 생각합니다. 세 가지 프로젝트를
-          A→Z까지 혼자 진행하며 <b>문제 정의–가설–검증</b>의 과정을 반복했고 그 과정에서 <b>문제 해결 능력</b>을 키웠습니다.
+          저는 좋은 서비스란 사용자의 니즈를 정확히 반영하고, 사용 과정에서 불편함이 없는 것이라고 생각합니다. <br/>
+          이러한 기준을 바탕으로 프로젝트를 기획부터 구현까지 전 과정을 동료들과 협력해 수행하며, 
+          ‘문제의 본질 정의 → 가설 수립 → 검증’의 과정을 반복했습니다.<br/>
+          이를 통해 단순한 기능 구현을 넘어 문제를 구조적으로 분석하고 협업 속에서 해결하는 역량을 키울 수 있었습니다.
         </p>
+
+        <h4 style="margin:18px 0 6px">IoT 기반 가스 누출 방지 시스템 <small style="color:var(--muted)">23.03~23.10</small></h4>
         <div class="chips">
-          <span class="chip">ReactNative</span>
-          <span class="chip">Firebase</span>
-          <span class="chip">Github</span>
-          <span class="chip">STM32</span>
-          <span class="chip">VHDL</span>
+          <span class="chip">Kotlin</span>
+          <span class="chip">C언어</span>
+          <span class="chip">STM32</span> 
+          <span class="chip">GitHub</span>
         </div>
+        <p>STM32 MCU 기반으로 가스 누출을 실시간 감지하고, 경보·자동 밸브 차단 기능을 구현했습니다. 
+        블루투스 연동 앱을 직접 개발하여 사용자 스마트폰에 알림을 전송하고, 원격 제어로 안전성을 강화했습니다. 
+        학부 졸업작품 경진대회 1등 수상 및 국제 학회 논문 발표로 성과를 인정받았습니다.</p>
 
-        <h4 style="margin:18px 0 6px">템탬카드놀이 <small style="color:var(--muted)">22.02~22.05</small></h4>
-        <p>iOS/Android 동시 배포 모바일 앱. SPA 친화성과 배포 편의로 ReactNative를 선택하여 결과적으로 두 스토어에 배포 완료.</p>
+        <h4 style="margin:18px 0 6px">관절가동범위 측정 기능을 갖는 연속수동운동 의료기기 시스템 설계 <small style="color:var(--muted)">24.01~24.11</small></h4>
+        <span class="chip">C언어</span>
+        <span class="chip">STM32</span> 
+        <span class="chip">GitHub</span>
+        <span class="chip">Range of Motion</span>
+        <p>의료기기의 관절가동범위를 측정·기록하는 시스템을 설계했습니다. 
+        하드웨어 제어와 LCD UI, 데이터 기록 기능을 통합하여 재활 치료의 효율성을 높였습니다. 
+        연구 결과는 반도체디스플레이학회 논문으로 발표되었습니다.</p>
 
-        <h4 style="margin:18px 0 6px">POMOTODO <small style="color:var(--muted)">21.08~22.01</small></h4>
-        <p>시간 관리 웹 서비스. 프론트–백엔드–DB–배포 전체 파이프라인을 직접 설계/운영하며 서버 운영 경험과 안정화 경험 축적.</p>
+        <h4 style="margin:18px 0 6px">IoT를 이용한 재활 운동 의료기기의 모니터링 시스템 설계 <small style="color:var(--muted)">24.03~24.07</small></h4>
+        <span class="chip">Kotlin</span>
+        <span class="chip">C언어</span>
+        <span class="chip">STM32</span> 
+        <span class="chip">Modbus Protocol</span> 
+        <span class="chip">GitHub</span>
+        <span class="chip">Monitoring System</span>
+        <p>LoRa 통신·LCD 제어·안드로이드 앱을 결합해 사용자의 운동 상태를 실시간 모니터링할 수 있는 시스템을 구현했습니다. 
+        연구원들과 협업하여 통신 프로토콜 문제를 해결했고, 데이터 시각화 및 기록 관리 기능을 확보했습니다. 
+        성과는 한국정보기술학회 추계 학술대회 논문집에 게재되었습니다.</p>
 
-        <h4 style="margin:18px 0 6px">JAVADOT <small style="color:var(--muted)">21.06~21.08</small></h4>
-        <p>Java/JavaFX 기반 플랫폼 게임. 입력/물리/충돌/스레딩 등 기초를 탄탄하게 학습.</p>
+        <h4 style="margin:18px 0 6px">지능형 열 감지기를 활용한 실시간 위치 추적 화재 감지 시스템 설계 <small style="color:var(--muted)">25.03~25.08</small></h4>
+        <span class="chip">C언어</span>
+        <span class="chip">STM32</span> 
+        <span class="chip">Modbus Protocol</span> 
+        <span class="chip">Power Line Communication</span> 
+        <span class="chip">GitHub</span>
+        <p>PLC(Power Line Communication) 기반으로 저비용·고효율의 위치 추적 화재 감지기를 개발했습니다. 
+        ADC 온도 측정, UART 통신, 지능형 알고리즘을 결합해 기존 대비 빠르고 정확한 감지를 실현했습니다. 
+        LCD 표시기를 통해 화재 발생 위치를 실시간으로 확인할 수 있는 구조를 설계했습니다.</p>
       </div>
 
       <!-- right: profile card like the screenshot -->
       <aside class="card profile">
-        <div class="photo" style="background-image:url('profile.jpg')" title="증명사진"></div>
+        <div class="photo" style="background-image:url('./profile.jpg')" title="증명사진"></div>
         <ul>
           <li><span class="label">Name</span> : 유도우</li>
           <li><span class="label">Address</span> : 충북 청주</li>
-          <li><span class="label">Email</span> : <a href="mailto:you@example.com">you@example.com</a></li>
-          <li><span class="label">Github</span> : <a href="https://github.com/USERNAME" target="_blank">github.com/USERNAME</a></li>
-          <li><span class="label">Blog</span> : <a href="#" target="_blank">blog.example.com</a></li>
-          <li><span class="label">Resume</span> : <a href="#" target="_blank">PDF 링크</a></li>
+          <li><span class="label">Email</span> : <a href="mailto:ehdn4358@naver.com">ehdn4358@naver.com</a></li>
+          <li><span class="label">Github</span> : <a href="https://github.com/Do-Woo-Yu/Do-Woo-Yu.Portfolio" target="_blank">https://github.com/Do-Woo-Yu/Do-Woo-Yu.Portfolio</a></li>
         </ul>
       </aside>
     </div>
@@ -262,7 +286,7 @@
 
     <!-- 프로젝트 1 -->
     <article class="project">
-      <h3 style="text-align:center; margin:0 0 6px">템탬카드놀이</h3>
+      <h3 style="text-align:center; margin:0 0 6px">IoT 기반 가스 누출 방지 시스템</h3>
       <p style="text-align:center; color:#6b7280; margin:0 0 18px">2022.02.26 – 2022.05.31 · 단어 교육용 모바일 애플리케이션</p>
       <div class="video">
         <!-- 유튜브/영상 주소로 교체 -->
